[gd_scene load_steps=3 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://Console.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0941176, 0.0941176, 0.0941176, 1 )

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CountLabel" type="Label" parent="CanvasLayer/Control/VBox"]
margin_right = 1024.0
margin_bottom = 14.0
align = 1

[node name="PreviewLabel" type="Label" parent="CanvasLayer/Control/VBox"]
margin_top = 18.0
margin_right = 1024.0
margin_bottom = 32.0
align = 1
autowrap = true

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/VBox/PreviewLabel"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.188235, 0.188235, 1 )

[node name="Console" type="RichTextLabel" parent="CanvasLayer/Control/VBox"]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 572.0
size_flags_horizontal = 3
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/VBox/Console"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.12549, 0.12549, 0.12549, 1 )

[node name="InputText" type="LineEdit" parent="CanvasLayer/Control/VBox"]
margin_top = 576.0
margin_right = 1024.0
margin_bottom = 600.0
